<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MCStatus</string>
    <string name="app_settings">MCStatus Settings</string>
    <string name="about_version">Version %1$s (Build %2$d)</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_addserver">Add Server</string>
    <string name="action_deleteserver">Delete Server(s)</string>
    <string name="action_editserver">Edit Server</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About This App</string>
    <string name="action_help">Help</string>
    <string name="action_privacy">Privacy</string>
    <string name="icon_description">Server FavIcon</string>
    <string name="edit_server_name">Enter Server Name:</string>
    <string name="edit_server_name_hint">My Minecraft Server</string>
    <string name="edit_server_address">Enter Server Address:</string>
    <string name="edit_server_address_hint">serveraddress[:port]</string>
    <string name="userlist_header">Users online:</string>
    <string name="icon">Icon</string>
    <string name="ok">OK</string>
    <string name="human__messages">Human Messsages</string>

</resources>
