<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_addserver"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/action_addserver"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_help"/>

</menu>