<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edit_server_name"
        android:text="@string/edit_server_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@id/edit_server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_server_name_hint"
        android:inputType="textCapWords"
        android:textColor="@android:color/primary_text_dark"
        android:importantForAutofill="no">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edit_server_address"
        android:text="@string/edit_server_address"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@id/edit_server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_server_address_hint"
        android:inputType="textUri"
        android:textColor="@android:color/primary_text_dark"
        android:importantForAutofill="no" />

</LinearLayout>